# healthcodeanalysis

./: .cpanel.yml  .env.sample  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
configs/: customer-template.json  test-customer-demo.json
docker/: .env.docker.sample  docker-compose.yml  setup.sh
scripts/: clone_site.py  config_validator.py  content_swapper.py  deploy.sh  deploy_customer.py  elementor_parser.py  hc-auto-activate.php  healthcode-api-bridge.php  wp_client.py
scripts/healthcode-design-system/: healthcode-design-system.php
scripts/healthcode-design-system/css/: healthcode-theme.css
scripts/healthcode-design-system/js/: healthcode-animations.js
tests/: test_e2e_swap.py  test_job_requirements.py  test_live_integration.py  test_phase1.py  test_phase2_4.py  test_phase6.py
workers/askme/: package-lock.json  package.json  wrangler.toml
workers/askme/src/: index.js
