[project]
name = "healthcode-analysis"
version = "1.0.0"
description = "WordPress Elementor site cloning and content automation via REST API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "coverage>=7.4.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # assert used (fine in tests)
    "S603",   # subprocess call (we use it intentionally)
    "S607",   # partial executable path
    "E501",   # line too long (handled by formatter)
    "B904",   # raise from within except (too strict)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "S108", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["scripts"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 55
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if self.dry_run:",
    "if self.client.dry_run:",
    "except ImportError",
    "except requests",
    "except ConnectionError",
    "except Exception",
    "raise RuntimeError",
    "raise FileNotFoundError",
]
